LTO: add duplicite streaming check

gcc/ChangeLog:

	PR lto/97508
	* lto-section-out.c (lto_begin_section): Check that we do not
	stream a section twice.